--- a/views/user/bookingConfirm.ejs
+++ b/views/user/bookingConfirm.ejs
@@ -104,66 +104,33 @@
             <div class="container">
                <div class="row ">
                  <div class="col-12 mt-5">
-            <form action="/status" method="post">
+                   <form action="/status" method="post">
 
                  <h2 class="text-center text-primary">Resort Name: <%=name%></h2>
-<!--                  <h2 class="text-center text-success">Room Type: <%=type%></h2> -->
+                 <h2 class="text-center text-success">Room Type: <%=type%></h2>
                  <h2 class="text-center text-info">Budget Price: <%=cost%></h2>
 </div>
                 <div class="col-lg-4 col-md-12 col-md-12 position">
                    <input type="hidden" name="name" value="<%=name%>">
                    <input type="hidden" name="type" value="<%=type%>">
                    <input type="hidden" name="cost" value="<%=cost%>">
-<!-- SERIES 1 Resort Booking -->
 
-<!--                 <legend class="text-muted">Reservation Date & Time</legend>
-                <div class="boking-tittle text-center mt-3 mb-3">
-                    <span>Check-in Date & Time</span>
-                    <input type="datetime-local" name="checkin_datetime" class="form-control text-center" required />
-                </div>
-                
-                <div class="boking-tittle text-center mt-3 mb-3">
-                    <span>Check-out Date & Time</span>
-                    <input type="datetime-local" name="checkout_datetime" class="form-control text-center" required />
-                </div>
-                
-                        
-                    <legend class="text-muted">Reservor Details</legend>                        
-                        <div class="row">
-                            <div class="col-md-8">
-                                <input type="text" name="fullname" class="form-control form-control-sm form-control-border" placeholder="Juan Dela Cruz" required>
-                                <small class="mx-2">Fullname</small>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <input type="text" name="contact" class="form-control form-control-sm form-control-border" placeholder="09123456789" required>
-                                <small class="mx-2">Contact #</small>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <small class="mx-2">Address</small>
-                                <textarea rows="3" name="address" class="form-control form-control-sm" placeholder="Block 23 Lot 6, Her Subd., Down There City, Anywhere, 2306" required></textarea>
-                            </div>
-                        </div> -->
-                        
                         <div class="boking-tittle text-center mt-3 mb-3">
                             <span> Booking Date:</span>
-                            <input type="datetime-local" name="date" class="form-control text-center" required />
+                            <input type="date" name="date" class="form-control text-center" required />
                         </div>
 
                         <div class="boking-tittle text-center mt-3 mb-3">
-                            <span> Room Want:</span>
+                            <span> Resort Want:</span>
                             <input name="roomWant"  type="number" class="form-control" required placeholder="0" />
                         </div>
 
 
                 </div>
 
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                    <input type="submit" class="btn btn-info mt-3 mb-5 positionbtn" value="Confirm Booking" >
-                    </div>
+<div class="col-lg-12 col-md-12 col-sm-12">
+  <input type="submit" class="btn btn-info mt-3 mb-5 positionbtn" value="Confirm Booking" >
+</div>
                </form>
 
              </div>
