--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -100,7 +100,7 @@
                   <th><%=data[i].roomWant%></th>
                   <th><%=data[i].date%></th>
                   <th>
-                    <form action="/admin/chnagestatus" method="POST">
+                    <form action="/admin/changestatus" method="POST">
                       <input type="hidden" name="mail" value="<%=data[i].email%>">
                       <input type="hidden" name="cat" value="<%=data[i].category%>">
                       <input type="hidden" name="type" value="<%=data[i].type%>">
